src/styles.less
@import 'highlight.js/styles/github-dark.css';

@import 'styles/variables.less';
@import 'styles/utils.less';
@import 'styles/tui-utils.less';

@import 'styles/modals.less';
@import 'styles/dropdowns.less';

@import 'styles/markdown.less';

// variables
:root {
  --header-height: var(--space-16);

  --sidebar-desktop-max-width: 280px;
  --sidebar-mobile-max-width: 450px;

  --chat-max-width: 768px;

  --chat-input-height: 56px;
  --chat-input-wrapper-padding: var(--space-4);
  --chat-input-wrapper-height: calc(
    var(--chat-input-height) + var(--chat-input-wrapper-padding) * 2
  );
  --chat-input-height: 56px;

  --chat-messages-gap: var(--space-6);
  --chat-messages-side-padding: var(--space-4);
  --chat-messages-inner-padding: var(--space-3);

  --color-bg: #151823;
  --color-bg-semi-subtle: #1d2133;
  --color-bg-subtle: #23283b;
  --color-bg-elevation: #2b3147;

  --color-bg-dark: #10121a;
  --color-bg-dark-subtle: #282a31;
  --color-bg-dark-elevation: #36383f;

  --color-bg-user-msg: #1d2030;

  --color-bg-button-hover: #232839;
  --color-bg-button-active: #292e42;
  --color-bg-button-focus: #2e344b;
}

.mobile {
  --header-height: var(--space-14);
  --chat-input-wrapper-padding: var(--space-3);
  --chat-input-wrapper-height: calc(
    var(--chat-input-height) + var(--chat-input-wrapper-padding) * 2
  );
}

[tuiTheme='dark'] {
  --tui-background-elevation-1: var(--color-bg-semi-subtle);
  --tui-background-elevation-2: var(--color-bg-subtle);
  --tui-background-elevation-3: var(--color-bg-elevation);

  --tui-background-neutral-1: rgba(200, 220, 255, 0.1);
  --tui-background-neutral-1-hover: rgba(200, 220, 255, 0.16);
  --tui-background-neutral-1-pressed: rgba(200, 220, 255, 0.22);

  --tui-background-neutral-2: rgba(200, 220, 255, 0.22);
  --tui-background-neutral-2-hover: rgba(200, 220, 255, 0.3);
  --tui-background-neutral-2-pressed: rgba(200, 220, 255, 0.4);

  --tui-border-normal: rgba(200, 220, 255, 0.14);
  --tui-border-hover: rgba(200, 220, 255, 0.6);
  --tui-border-focus: rgba(200, 220, 255, 0.64);
}

// common
html,
body,
tui-root {
  height: 100%;
  overflow: hidden;
}

.chat-container {
  height: calc(100vh - var(--header-height));
  height: calc(100dvh - var(--header-height));
}

